--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "clothing",
   "version": "0.1.0",
+   "proxy": "http://localhost:3000",
   "private": true,
+  "engines": {
+   "node": "12.16.3",
+   "yarn":"1.22.5",
+   "npm":"6.14.7"
+  },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.19.1",
     "lodash.memoize": "^4.1.2",
     "node-sass": "^4.14.1",
@@ -19,6 +22,9 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0"
+  },
+  "devDependencies": {
+    "react-scripts": "3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
